# typing-test

./: .gitignore  DockerFile  README.md  main.py  pyproject.toml  textbank.py
App/: main_app.py
docs/: PLAN.md  PROGRESS.md
src/: main.py  prompt_source.py  prompts.json  typing_calculate.py
src/typing_test/: __init__.py  main.py  metrics.py  prompt_source.py  stats_store.py  typing_calculate.py
src/typing_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/typing_test/data/: prompts.json  script_sort_jsonPrompts.py  stats.json
